fix: order total + overflow of modal

--- a/project/src/styles/components/modal.css
+++ b/project/src/styles/components/modal.css
@@ -15,4 +15,6 @@
 
 .modal .card {
   cursor: default;
+  max-height: 100vh;
+  overflow-y: scroll;
 }
